[gd_scene load_steps=2 format=3 uid="uid://b22akfk23ehd3"]

[ext_resource type="Script" path="res://Scenes/player_customize.gd" id="1_6kuql"]

[node name="PlayerCustomize" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6kuql")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer"]
layout_direction = 1
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Choose Your Character!"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer2"]
layout_direction = 1
layout_mode = 2
alignment = 1

[node name="VSeparator" type="VSeparator" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="PanelContainer1" type="PanelContainer" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2"]
layout_mode = 2

[node name="Opts" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer1"]
layout_mode = 2

[node name="OptionsLabel" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer1/Opts"]
layout_mode = 2
text = "Options:"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer1/Opts"]
layout_mode = 2

[node name="Hair" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer1/Opts"]
layout_mode = 2
text = "Hair"

[node name="Eyes" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer1/Opts"]
layout_mode = 2
text = "Eyes"

[node name="Shirt" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer1/Opts"]
layout_mode = 2
text = "Shirt"

[node name="Pants" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer1/Opts"]
layout_mode = 2
text = "Pants"

[node name="Shoes" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer1/Opts"]
layout_mode = 2
text = "Shoes"

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2"]
layout_mode = 2

[node name="HairOpt" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2"]
layout_mode = 2

[node name="HairOptionsLabel" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/HairOpt"]
layout_mode = 2
text = "Hair Options: "

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/HairOpt"]
layout_mode = 2

[node name="Opt1" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/HairOpt"]
layout_mode = 2
text = "Hair 1"

[node name="Opt2" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/HairOpt"]
layout_mode = 2
text = "Hair 2"

[node name="Opt3" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/HairOpt"]
layout_mode = 2
text = "Hair 3"

[node name="EyesOpt" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2"]
visible = false
layout_mode = 2

[node name="EyesOptionsLabel" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/EyesOpt"]
layout_mode = 2
text = "Eyes Options: "

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/EyesOpt"]
layout_mode = 2

[node name="Opt1" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/EyesOpt"]
layout_mode = 2
text = "Eyes 1"

[node name="Opt2" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/EyesOpt"]
layout_mode = 2
text = "Eyes 2"

[node name="Opt3" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/EyesOpt"]
layout_mode = 2
text = "Eyes 3"

[node name="ShirtOpt" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2"]
visible = false
layout_mode = 2

[node name="ShirtOptionsLabel" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/ShirtOpt"]
layout_mode = 2
text = "Shirt Options: "

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/ShirtOpt"]
layout_mode = 2

[node name="Opt1" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/ShirtOpt"]
layout_mode = 2
text = "Shirt 1"

[node name="Opt2" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/ShirtOpt"]
layout_mode = 2
text = "Shirt 2"

[node name="Opt3" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/ShirtOpt"]
layout_mode = 2
text = "Shirt 3"

[node name="PantsOpt" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2"]
visible = false
layout_mode = 2

[node name="PantsOptionsLabel" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/PantsOpt"]
layout_mode = 2
text = "Pants Options: "

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/PantsOpt"]
layout_mode = 2

[node name="Opt1" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/PantsOpt"]
layout_mode = 2
text = "Pants 1"

[node name="Opt2" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/PantsOpt"]
layout_mode = 2
text = "Pants 2"

[node name="Opt3" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/PantsOpt"]
layout_mode = 2
text = "Pants 3"

[node name="ShoesOpt" type="VBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2"]
visible = false
layout_mode = 2

[node name="ShoesOptionsLabel" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/ShoesOpt"]
layout_mode = 2
text = "Shoes Options: "

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/ShoesOpt"]
layout_mode = 2

[node name="Opt1" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/ShoesOpt"]
layout_mode = 2
text = "Shoes 1"

[node name="Opt2" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/ShoesOpt"]
layout_mode = 2
text = "Shoes 2"

[node name="Opt3" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer2/ShoesOpt"]
layout_mode = 2
text = "Shoes 3"

[node name="VSeparator3" type="VSeparator" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Node2D" type="Node2D" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer3"]
position = Vector2(-232, 0)

[node name="Sprite2D" type="Sprite2D" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer3/Node2D"]
position = Vector2(617, 260)
region_enabled = true
region_rect = Rect2(27, 36, 259, 363)

[node name="VSeparator4" type="VSeparator" parent="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer3" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer3"]
layout_direction = 1
layout_mode = 2
alignment = 1

[node name="OK" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer3/HBoxContainer3"]
layout_mode = 2
text = "OK"

[node name="Cancel" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer3/HBoxContainer3"]
layout_mode = 2
text = "Cancel"

[node name="HSeparator4" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer1/Opts/Hair" to="." method="_on_hair_opts_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer1/Opts/Eyes" to="." method="_on_eyes_opt_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer1/Opts/Shirt" to="." method="_on_shirt_opts_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer1/Opts/Pants" to="." method="_on_pants_opts_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer2/HBoxContainer2/PanelContainer1/Opts/Shoes" to="." method="_on_shoes_opts_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer3/HBoxContainer3/OK" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer3/HBoxContainer3/Cancel" to="." method="_on_cancel_pressed"]
